Split off targets into multiple directories (client and editor, for now)

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,12 @@
 bin/
+lib/
 CMakeFiles/
 cmake_install.cmake
 CMakeCache.txt
 Makefile
+
+# Qt
+.lupdate/
+*.pro.user*
+CMakeLists.txt.user*
+*_autogen/
