--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,10 @@ set( CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin )
 set( CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib )
 set( CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/lib )
 
+SET(BASEPATH "${CMAKE_SOURCE_DIR}")
+include_directories("${BASEPATH}")
+include_directories("src")
+
 find_package(OpenGL REQUIRED COMPONENTS OpenGL)
 
 find_package(SDL2 REQUIRED)
