--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -1,4 +1,4 @@
+find_package(glfw3 REQUIRED)
 
-add_executable(client "src/main.cpp" $<TARGET_OBJECTS:openblocks>)
-include_directories("../src")
-target_link_libraries(client ${SDL2_LIBRARIES} ${GLEW_LIBRARIES} ${GLUT_LIBRARIES} OpenGL::GL OpenGL::GLU glfw glm::glm assimp ReactPhysics3D::ReactPhysics3D pugixml::pugixml)
+add_executable(client "src/main.cpp")
+target_link_libraries(client PRIVATE openblocks glfw)
