--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,14 @@
-bin/
-lib/
-CMakeFiles/
-cmake_install.cmake
-CMakeCache.txt
-Makefile
+/bin/
+/lib/
+/build/
 
 # Qt
-.lupdate/
-*.pro.user*
-CMakeLists.txt.user*
-*_autogen/
+/*.pro.user*
+/CMakeLists.txt.user*
 
 # Clangd
 /compile_commands.json
 /.cache
 
 # Gdb
-.gdb_history
+/.gdb_history
