refactor(editor): turned main view into its own document

--- a/editor/CMakeLists.txt
+++ b/editor/CMakeLists.txt
@@ -30,6 +30,8 @@ set(PROJECT_SOURCES
         panes/explorermodel.cpp
         panes/propertiesview.h
         panes/propertiesview.cpp
+        placedocument.cpp
+        placedocument.h
         ${TS_FILES}
 )
 
