feat(lua): added basis for lua scripting

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -11,11 +11,15 @@ find_package(pugixml 1.15 REQUIRED)
 find_package(Stb REQUIRED)
 include_directories(${Stb_INCLUDE_DIR})
 
+# PkgConfig packages
+find_package(PkgConfig REQUIRED)
+pkg_check_modules(LUAJIT REQUIRED luajit)
+
 file(GLOB_RECURSE SOURCES "src/*.cpp" "src/*.h")
 add_library(openblocks STATIC ${SOURCES})
 set_target_properties(openblocks PROPERTIES OUTPUT_NAME "openblocks")
-target_link_libraries(openblocks ${GLEW_LIBRARIES} OpenGL::GL ReactPhysics3D::ReactPhysics3D pugixml::pugixml)
-target_include_directories(openblocks PUBLIC "src" "../include")
+target_link_libraries(openblocks ${GLEW_LIBRARIES} ${LUAJIT_LIBRARIES} OpenGL::GL ReactPhysics3D::ReactPhysics3D pugixml::pugixml)
+target_include_directories(openblocks PUBLIC "src" "../include" ${LUAJIT_INCLUDE_DIR})
 
 # Windows-specific dependencies
 if(WIN32)
