feat(autogen): basic autogen starter

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,6 +11,14 @@
             "program": "${workspaceFolder}/build/bin/editor",
             "args": [],
             "cwd": "${workspaceFolder}",
+        },
+        {
+            "type": "lldb",
+            "request": "launch",
+            "name": "Debug Autogen",
+            "program": "${workspaceFolder}/autogen/build/autogen",
+            "args": ["core/src", "core/src/objects", "autogen/build/generated"],
+            "cwd": "${workspaceFolder}",
         }
     ]
 }
