feat(autogen): better integration into cmake and replaced caching

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -16,11 +16,29 @@ find_package(PkgConfig REQUIRED)
 pkg_check_modules(LUAJIT REQUIRED luajit)
 
 # Run autogen
-add_custom_target(build_autogen ALL
-    COMMAND "${CMAKE_BINARY_DIR}/autogen/autogen" "${CMAKE_CURRENT_SOURCE_DIR}/src" "${CMAKE_CURRENT_SOURCE_DIR}/src/objects" "${CMAKE_BINARY_DIR}/generated"
+file(GLOB_RECURSE AUTOGEN_SOURCES RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}/src/objects" "src/objects/*.h")
+
+# https://cmake.org/cmake/help/book/mastering-cmake/chapter/Custom%20Commands.html
+foreach (SRC ${AUTOGEN_SOURCES})
+    string(REGEX REPLACE "[.]h$" ".cpp" OUT_SRC_NAME ${SRC})
+    set(SRC_PATH "${CMAKE_CURRENT_SOURCE_DIR}/src/objects/${SRC}")
+    set(OUT_PATH "${CMAKE_BINARY_DIR}/generated/${OUT_SRC_NAME}")
+
+    add_custom_command(
+        OUTPUT "${OUT_PATH}"
+        DEPENDS "${SRC_PATH}"
+        COMMAND "${CMAKE_BINARY_DIR}/autogen/autogen" "${CMAKE_CURRENT_SOURCE_DIR}/src" "${SRC_PATH}" "${OUT_PATH}"
+    )
+
+    list(APPEND AUTOGEN_OUTS "${OUT_PATH}")
+endforeach()
+
+add_custom_target(autogen_build ALL
+    DEPENDS ${AUTOGEN_OUTS}
 )
 
-file(GLOB_RECURSE SOURCES "src/*.cpp" "src/*.h" "${CMAKE_BINARY_DIR}/generated/__all__.cpp")
+file(GLOB_RECURSE SOURCES "src/*.cpp" "src/*.h")
+list(APPEND SOURCES ${AUTOGEN_OUTS})
 add_library(openblocks STATIC ${SOURCES})
 set_target_properties(openblocks PROPERTIES OUTPUT_NAME "openblocks")
 target_link_libraries(openblocks ${GLEW_LIBRARIES} ${LUAJIT_LIBRARIES} OpenGL::GL ReactPhysics3D::ReactPhysics3D pugixml::pugixml)
