--- a/editor/CMakeLists.txt
+++ b/editor/CMakeLists.txt
@@ -13,7 +13,7 @@ set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
 find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets Multimedia LinguistTools)
 find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets Multimedia LinguistTools)
-find_package(QScintilla)
+find_package(QScintilla REQUIRED)
 
 set(TS_FILES editor_en_US.ts)
 
