--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -27,7 +27,7 @@ foreach (SRC ${AUTOGEN_SOURCES})
     add_custom_command(
         OUTPUT "${OUT_PATH}"
         DEPENDS "${SRC_PATH}"
-        COMMAND "${CMAKE_BINARY_DIR}/autogen/autogen" "object" "${CMAKE_CURRENT_SOURCE_DIR}/src" "${SRC_PATH}" "${OUT_PATH}"
+        COMMAND "${CMAKE_BINARY_DIR}/autogen/autogen" "${CMAKE_CURRENT_SOURCE_DIR}/src" "${SRC_PATH}" "${OUT_PATH}"
     )
 
     list(APPEND AUTOGEN_OUTS "${OUT_PATH}")
