feat(autogen): added enums

--- a/autogen/CMakeLists.txt
+++ b/autogen/CMakeLists.txt
@@ -8,6 +8,8 @@ add_executable(autogen
     src/object/codegen.cpp
     src/data/analysis.cpp
     src/data/codegen.cpp
+    src/enum/analysis.cpp
+    src/enum/codegen.cpp
 )
 
 set_target_properties(autogen PROPERTIES OUTPUT_NAME "autogen")
