--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -5,3 +5,4 @@ find_package(glfw3 REQUIRED)
 
 add_executable(client "src/main.cpp")
 target_link_libraries(client PRIVATE ${SDL2_LIBRARIES} openblocks glfw)
+add_dependencies(client openblocks)
