fix(autogen): fixed compilation on windows + clang dependency

--- a/autogen/CMakeLists.txt
+++ b/autogen/CMakeLists.txt
@@ -13,5 +13,5 @@ add_executable(autogen
 )
 
 set_target_properties(autogen PROPERTIES OUTPUT_NAME "autogen")
-target_link_libraries(autogen -lclang)
-target_include_directories(autogen PUBLIC "src" ${CLANG_INCLUDE_DIRS})
+target_link_libraries(autogen ${CLANG_LIBRARY})
+target_include_directories(autogen PUBLIC "src" ${CLANG_INCLUDE_DIR})
