--- a/editor/CMakeLists.txt
+++ b/editor/CMakeLists.txt
@@ -36,10 +36,10 @@ set(PROJECT_SOURCES
         panes/outputtextview.cpp
         script/scriptdocument.h
         script/scriptdocument.cpp
-        license.ui
-        license.h
-        license.cpp
-        licensetxt.cpp
+        aboutdialog.ui
+        aboutdialog.h
+        aboutdialog.cpp
+        editor.qrc
         ${TS_FILES}
 )
 
