refactor(cmake): (Thanks @FloofyPlasma!) replaced vcpkg with CPM

--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -1,8 +1,5 @@
-find_package(SDL2 REQUIRED)
-include_directories(${SDL2_INCLUDE_DIRS})
-
-find_package(glfw3 REQUIRED)
+include(${CMAKE_CURRENT_SOURCE_DIR}/deps.cmake)
 
 add_executable(client "src/main.cpp")
-target_link_libraries(client PRIVATE ${SDL2_LIBRARIES} openblocks glfw)
+target_link_libraries(client PRIVATE openblocks glfw)
 add_dependencies(client openblocks)
