feat(test): some few lua testing

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -5,3 +5,8 @@ function (create_test TEST_NAME)
     add_dependencies(${TARGET_NAME} openblocks)
     add_test(NAME ${TARGET_NAME} COMMAND ${TARGET_NAME})
 endfunction ()
+
+create_test(lua src/luatest.cpp)
+
+# https://stackoverflow.com/a/36729074/16255372
+add_custom_target(check ${CMAKE_CTEST_COMMAND} --output-on-failure WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
