--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -7,6 +7,8 @@ function (create_test TEST_NAME)
 endfunction ()
 
 create_test(lua src/luatest.cpp)
+create_test(luasched src/luaschedtest.cpp)
+create_test(luasignal src/luasignaltest.cpp)
 
 # https://stackoverflow.com/a/36729074/16255372
 add_custom_target(check ${CMAKE_CTEST_COMMAND} --output-on-failure WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
